fix overview spacing

--- a/src/index.css
+++ b/src/index.css
@@ -238,7 +238,7 @@ header {
 
 .with-outline {
   display: flex;
-  padding: 5rem 2rem 4rem 2rem;
+  padding: 5rem 15% 4rem 10%;
 }
 
 .with-outline .project {
